refactor: improve code structure

--- a/pages/game.html
+++ b/pages/game.html
@@ -10,7 +10,9 @@
        through an asteroid field, dodging incoming space rocks to stay alive."
     />
     <title>Asteroid Dodge</title>
-    <link rel="stylesheet" type="text/css" href="./css/index.css" />
+    <link rel="stylesheet" type="text/css" href="../css/index.css" />
   </head>
-  <body></body>
+  <body>
+    <script src="../js/game.js"></script>
+  </body>
 </html>
