refactor: enhance code readability and maintainability

--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Asteroid Dodge is a fast-paced mini-game where you pilot a spaceship
-       through an asteroid field, dodging incoming space rocks to stay alive."
-    />
     <title>Asteroid Dodge</title>
-    <link rel="stylesheet" type="text/css" href="./css/index.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+
+  <body>
+    <div class="body_container">
+      <div class="game_description">Welcome!!</div>
+      <div class="game_description">
+        As a space explorer, your goal is to dodge incoming asteroids and stay
+        alive as long as possible.
+      </div>
+      <div class="game_description">
+        Use W, A, S, and D to dodge the asteroids.
+      </div>
+      <a href="/pages/game.html" class="start_menu">Play!</a>
+      <div class="reference">All icons used are from icons8.com</div>
+    </div>
+  </body>
 </html>
